OO-5839: revert changes in equals method of ores helper